--- a/index.html
+++ b/index.html
@@ -4,16 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">      
+    <link rel="stylesheet" href="style.css" >
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">    
+    <script src="https://kit.fontawesome.com/73737e6614.js" crossorigin="anonymous"></script>  
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="main.js" defer></script>
 </head>
 <body>
-    <h1 class='title'>Moon_Wright</h1>
-    <h2>누구나 영화평론가가 될수 있는 세상, 문라이트</h2>
-    <ol>
-        <li><a href= "show.html">introduce Moon_Wright</a></li>  
-        <li><a href= "start.html">Start Moon_Wright</a></li>  
-        <li><a href= "read.html">Read Moon_Wright</a></li>  
-    </ol>
-
+    <nav class='navbar'>
+        <div class="logo">
+            <i class="fas fa-moon"></i>
+            <a href="index.html">Moon_Wright</a>
+        </div>
+        <ul class="menu">
+            <li><a href= "show.html">introduce Moon_Wright</a></li>  
+            <li><a href= "start.html">Start Moon_Wright</a></li>  
+            <li><a href= "read.html">Read Moon_Wright</a></li>  
+        </ul>
+        <ul class="icon">
+            <li><i class="fab fa-instagram"></i></li>
+            <li><i class="fab fa-facebook-f"></i></li>
+        </ul>
+        <a href="#" class="toogle">
+            <i class="fas fa-bars"></i>
+        </a>
+    </nav>
+    <section class='main_page'>
+        <div class='introduce' >
+            <div class='explain'>누구나 영화평론가가 되는 세상, 문라이트</div>
+        </div>
+        <div class='top_write'>
+            <li><a href= "show.html" class="content1">“폭풍우 속 깨달음”</a></li> 
+            <li><a href= "show.html" class="content2">"불가능 속 피어난 기적”</a></li> 
+            <li><a href= "show.html" class="content3">“ 따뜻한 사랑 이란”</a></li> 
+        </div>   
+        <div class="type">
+            <div class="movie_type">드라마</div>
+            <div class="movie_type">판타지</div>
+            <div class="movie_type">서부</div>
+            <div class="movie_type">공포</div>
+            <div class="movie_type">로맨스</div>
+            <div class="movie_type">모험</div>
+            <div class="movie_type type7">스릴러</div>
+            <div class="movie_type type8">모험</div>
+            <div class="movie_type type9">스릴러</div>
+            <div class="movie_type type10">10</div>
+            <div class="movie_type type11">11</div>
+            <div class="movie_type type12">12</div>
+            <div class="movie_type type13">13</div>
+            <div class="movie_type type14">14</div>
+            <div class="movie_type type15">15</div>
+            <div class="movie_type type16">16</div>
+            <div class="movie_type type17">17</div>
+            <div class="movie_type type18">18</div>
+            <div class="movie_type type19">19</div>
+            <div class="movie_type type20">20</div>
+            <div class="movie_type type21">21</div>
+            <div class="movie_type type22">22</div>
+            <div class="movie_type type23">23</div>
+            <div class="movie_type type24">24</div>
+            <div class="movie_type type25">25</div>
+            <div class="movie_type type26">26</div>
+            <div class="movie_type type27">27</div>
+            <div class="movie_type type28">28</div>
+        </div>  
+    </section>
 </body>
 </html>
